Fix cart price overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1404,10 +1404,6 @@ body {
     justify-content: space-between;
     align-items: center;
   }
-
-  .cart-product .pro-name {
-    margin-top: 20px;
-  }
 }
 
 /* ---------------------------- Product Page ---------------------------- */
